--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodule2"]
 	path = submodule2
 	url = git@github.com:jamesdabai/submodule2.git
+[submodule "submodule1"]
+	path = submodule1
+	url = git@github.com:jamesdabai/submodule1.git
